# lbcpp

./: CMakeLists.txt  EvolutionaryComparison.h  ProjectHome.md  arnaud_TODO.txt  barcharts.py  build-macosx-xcode.sh  build-win32-msvc7.bat  build-win32-msvc8-express.bat  build-win32-msvc8.bat  build-win32-msvc9-x64.bat  cralgoteries.txt  createplots.py  drawplots.py  julien.txt
compiler/: CMakeLists.txt  CRAlgoCompiler.cpp  common.h
compiler/compiler/: CRAlgoCompilerRewriteVisitor.h  CRInputFile.cpp  CheckCRAlgoSyntaxVisitor.h
compiler/generator/: CRAlgorithmGenerator.cpp  CRAlgorithmScopeEnumerator.hpp  CRAlgorithmScopeGenerator.cpp  CRAlgorithmScopeGenerator.h  CRAlgorithmScopeIntrospectionFunction.hpp  CRAlgorithmScopeRunFunction.hpp  CRAlgorithmScopeStepFunction.hpp  CRAlgorithmStateFunctionClass.hpp  ChooseClassGenerator.cpp  FeatureGeneratorClassGenerator.cpp
compiler/language/: CRAlgoLexer.h  CRAlgoPTree.h  CRAlgoParser.h  CRAlgorithmChoose.cpp  CRAlgorithmLocalScope.h
compiler/tools/: CodePrinter.h  PTreeGenerator.h  PreprocessorAndCommentsChunker.h  PrettyPrintVisitor.h  RewriteVisitor.h  ScopeBasedRewriteVisitor.h
examples/: CMakeLists.txt
examples/CRAlgorithm/: FirstOrderSequenceLabeling.lcpp  GridWorldReinforcementLearning.lcpp  LeCompteEstBon.lcpp
examples/FeatureGenerator/: FeatureAcceptVisitor.lcpp
examples/LearningMachine/: ClassificationToBatchRanking.cpp  LoadMaxentClassifier.cpp  TrainLinearRegressorStochastic.cpp  TrainMaxentClassifierBatch.cpp  TrainMaxentClassifierOnline.cpp  TrainMaxentClassifierStochastic.cpp  TuneMaxentRegularizerWithCrossValidation.cpp
examples/Misc/: FeatureGenerators.cpp  MissingValues.cpp  SimpleIntrospection.cpp  SimpleIntrospection.xml  UserInterfaceExecutionCallback.cpp  UserTypeTraits.cpp  XorRegression.cpp
examples/TestUnit/: ExtraTreeTestUnit.h  MainWorkUnit.cpp  TestUnitClasses.xml  X3TesterProgram.h
explorer/: CMakeLists.txt  ExplorerApplication.cpp  ExplorerClasses.xml  ExplorerConfiguration.cpp  ExplorerConfiguration.h  ExplorerLibrary.xml  ExplorerProject.cpp  ExplorerProject.h
explorer/Components/: ContainerSelectorComponent.h  FileObjectComponent.h  LuaCodeEditorComponent.cpp  LuaCodeEditorComponent.h  ObjectBrowser.h  ObjectComponentContainer.h  ObjectComponents.cpp  ObjectContainerNameListComponent.h  ObjectGraphAndContentComponent.h  ObjectGraphComponent.h  StringComponent.h  StringToObjectMapTabbedComponent.h  TableComponent.h  TreeComponent.h  VariableBrowser.cpp  VariableBrowser.h  VariableComponents.cpp  VariableTreeComponent.cpp  VariableTreeComponent.h  common.h
explorer/ProcessManager/: NewProcessDialogWindow.h  ProcessComponent.cpp  ProcessConsoleSettingsComponent.cpp  ProcessManager.cpp  ProcessManager.h  ProcessManagerComponent.cpp  ProcessManagerComponent.h  RecentProcesses.cpp  RecentProcesses.h
explorer/Proteins/: MultiProtein1DComponent.h  MultiProtein2DComponent.h  MultiSequenceComponent.h  ProteinComponent.h
explorer/Utilities/: ComponentWithPreferedSize.h  ObjectSelector.h  SimpleTreeViewItem.h  SplittedLayout.h  VariableSelector.h
explorer/WorkUnitManager/: NewWorkUnitDialogWindow.cpp  NewWorkUnitDialogWindow.h  WorkUnitManagerClasses.xml  WorkUnitManagerConfiguration.cpp  WorkUnitManagerConfiguration.h  WorkUnitManagerLibrary.xml
introgen/: CMakeLists.txt  IntrospectionGenerator.cpp
juce/: CMakeLists.txt  ConsoleProcess.cpp  ConsoleProcess.h  Win32ConsoleProcess.h  juce_CodeDocument.cpp  juce_CodeEditorComponent.cpp  juce_CodeEditorComponent.h  juce_LuaCodeTokeniser.cpp  juce_LuaCodeTokeniser.h  juce_amalgamated.h  jucebinbuild.cpp
lbcpp-ml/: BanditPool.cpp  CMakeLists.txt  DataTable.cpp  DataTableComponent.cpp  DataTableComponent.h  Domain.cpp  Fitness.cpp  LBCppMLLibrary.xml  Problem.cpp  SolutionContainer.cpp  SolutionContainerComponent.h  SolutionSet.cpp  SolutionSetComponent.h  precompiled.h
lbcpp-ml/Aggregator/: AggregatorLibrary.xml  MeanDoubleAggregator.h  MeanDoubleVectorAggregator.h
lbcpp-ml/Comparator/: ComparatorLibrary.xml  DominanceComparator.h  ObjectiveComparator.h  ParetoRankComparator.h
lbcpp-ml/Data/: BinaryConfusionMatrix.cpp  ConfusionMatrixComponent.h  DoubleVector.cpp
lbcpp-ml/Expression/: ClassificationObjectives.h  Expression.cpp  ExpressionActionDomainsCache.h  ExpressionDomain.cpp  ExpressionLibrary.xml  ExpressionRPN.cpp  ExpressionRPNSearchState.h  ExpressionSampler.cpp  ExpressionTreeView.h  ExpressionUniverse.cpp  InsertExpressionPerturbator.h  PostfixExpression.cpp  PostfixExpressionState.h  PrefixExpressionState.h  RegressionObjectives.h  ShrinkExpressionPerturbator.h  SubTreeCrossOverExpressionPerturbator.h  TypedPostfixExpressionState.h
lbcpp-ml/Function/: BooleanFunctions.h  DoubleFunctions.h  DoubleVectorFunctions.h  EnumerationFunctions.h  Function.cpp  FunctionLibrary.xml  IntegerFunctions.h  ObjectFunctions.h  SpecialFunctions.h  VoteFunctions.h
lbcpp-ml/Learner/: EnsembleLearner.h  ExhaustiveConditionLearner.h  LearnerLibrary.xml  (+1 more)
src/: CMakeLists.txt  CRAlgorithmLearner.cpp  Choose.cpp  ChooseFunction.cpp  Class.cpp  ContinuousFunction.cpp  DenseVector.cpp  ErrorHandler.cpp  FeatureDictionary.cpp  FeatureGenerator.cpp  FeatureVisitor.cpp  GradientBasedLearner.cpp  GradientBasedLearningMachine.cpp  IterationFunction.cpp  LBCppClasses.xml  LBCppLibrary.xml  LazyFeatureGenerators.cpp  LazyVector.cpp  LearningExample.cpp  LearningMachine.cpp  Object.cpp  ObjectConsumer.cpp  ObjectContainer.cpp  ObjectGraph.cpp  ObjectStream.cpp  Optimizer.cpp  OptimizerStoppingCriterion.cpp  Policy.cpp  RunWorkUnit.cpp  SparseVector.cpp  StoppingCriterion.cpp  StringDictionary.cpp  Table.cpp  Utilities.cpp  Variable.cpp  classes.cpp  lbcpp.cpp  library.cpp
test/: CMakeLists.txt  EmptyCRAlgorithm.cr++  SenseOneFeature.cr++  SimplestSequenceLabeling.cr++  TestCpp.cpp  UserTypeTraits.cr++
trunk/: CMakeLists.txt  SDRpicture.py  arnaud_TODO.txt  barcharts.py  build-linux-x86-eclipse.sh  build-linux-x86-kdevelop.sh  build-win32-msvc8.bat  build-win32-msvc9-x64.bat  build-win32-msvc9.bat  cralgoteries.txt  julien.txt  lexp.tex
(+7391 files in other folders)
